# chameleon

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  Trunk.toml  docker-compose.yaml  sqlx-data.json
crates/chameleon-backend/: Cargo.toml
crates/chameleon-backend/migrations/: 20221218103457_create-schema.sql  20221222033321_create-game.sql  20230101151028_add-lobby-passcode.sql
crates/chameleon-backend/src/: app.rs  args.rs  database.rs  error.rs  extract.rs  headers.rs  lib.rs  main.rs
crates/chameleon-backend/src/domain/: authentication_id.rs  database.rs  game.rs  lobby.rs  lobby_id.rs  local_id.rs  mod.rs  session_id.rs  user.rs  user_id.rs
crates/chameleon-backend/src/domain_old/: lobby.rs  local_id.rs  mod.rs  user.rs
crates/chameleon-backend/src/extract/: local_id.rs  mod.rs  user_id.rs
crates/chameleon-backend/src/jsonapi/: game.rs  mod.rs  user.rs
crates/chameleon-backend/src/routes/: api_v1_games.rs  api_v1_lobbies.rs  api_v1_message.rs  api_v1_ping.rs  api_v1_signup.rs  api_v1_telemetry.rs  api_v1_user.rs  api_v1_userinfo.rs  api_v1_users.rs  mod.rs  ws_v1.rs  ws_v1_lobbies.rs
crates/chameleon-frontend/: Cargo.toml  index.html
crates/chameleon-frontend/scss/: main.scss
crates/chameleon-frontend/scss/base/: _typography.scss
crates/chameleon-frontend/scss/components/: _infinite-scrolling.scss  _lobby-details.scss  _lobby-host-form.scss  _lobby-list-item.scss  _lobby-list.scss  _navigation.scss  _server-details.scss  _server-list-item.scss  _server-list.scss  _top-menu.scss  _topic-card.scss  _user-form.scss
crates/chameleon-frontend/scss/pages/: _browse.scss  _host.scss  _lobby.scss  _main-menu.scss  _user-invite.scss  _user.scss
crates/chameleon-frontend/scss/themes/: _dark.scss  _light.scss
crates/chameleon-frontend/src/: app.rs  lib.rs  main.rs
crates/chameleon-frontend/src/components/: app.rs  authentication_switch.rs  chat.rs  infinite_scrolling.rs  lobby_chat_input.rs  lobby_chat_list.rs  lobby_chat_list_item.rs  lobby_creation_form.rs  lobby_details.rs  lobby_host_form.rs  lobby_invite_form.rs  lobby_list.rs  lobby_list_infinite_scrolling.rs  lobby_list_item.rs  lobby_member_list.rs  lobby_member_list_item.rs  mod.rs  navigation.rs  server_details.rs  server_list.rs  server_list_item.rs  test_chat.rs  test_user.rs  theme_container.rs  theme_picker.rs  top_menu.rs  topic_card.rs  user_form.rs  user_signup.rs
crates/chameleon-frontend/src/containers/: lobby_chat_list_container.rs  lobby_details_container.rs  lobby_member_list_container.rs  mod.rs
docs/: data.md
(+34 files in other folders)
