[package]
name = "chameleon-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
gloo-console = "0.2.3"
gloo-net = "0.2.5"
wasm-bindgen-futures = "0.4.33"
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
yew-router = "0.17.0"
