[package]
name = "chameleon-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chameleon-protocol = { version = "0.1.0", path = "../chameleon-protocol" }
futures = "0.3.25"
gloo = "0.8.0"
serde = "1.0.152"
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4", "js"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
yew-router = "0.17.0"
